[project]
name = "jupyter-notebook-remote"
version = "0.1.0"
description = ""
authors = [
    {name = "ISHITSUKA Hikaru",email = "h.ishitsuka@idein.jp"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
